exs.lv/css/core.css
/* ... */
#noindex-phone {
	width: 90px;
	height: 11px;
	display: inline-block;
	background: url('/bildes/number-light.gif') no-repeat 0 0;
}

/* spēļu serveru monitorings */
.gameserver {
	margin: -1px;
	padding: 3px 0;
}

.gameserver p {
	margin: 0;
	padding: 1px 5px;
	font-size: 12px;
}

.gameserver p.gameserver-map {
	padding: 0;
	margin: 0;
	position: relative;
	font-family: Ubuntu, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.gameserver p.gameserver-map .gameserver-mapimg {
	width: 100%;
}

.gameserver p.gameserver-map .gameserver-mapinfo {
	position: absolute;
	bottom: 6px;
	left: 0;
	right: 0;
	color: #fafafa;
	width: 100%;
	background: transparent url('//img.exs.lv/bildes/black_35.png') repeat;
	font-size: 90%;
	line-height: 16px;
}

.gameserver p.gameserver-map .gameserver-mapname {
	float: left;
	padding: 3px 3px 3px 8px;
}

.gameserver p.gameserver-map .gameserver-online {
	float: right;
	padding: 3px 7px 3px 3px;
}

.gameserver p.gameserver-map .gameserver-online .gameserver-online-now {
	font-size: 115%;
	color: #b4e818;
	line-height: 16px;
	margin: -1px 0 0;
}

.gameserver p.gameserver-map .gameserver-online .gameserver-online-max {
	font-size: 85%;
	line-height: 16px;
}

.gameserver .gameserver-reload {
	width: 16px;
	height: 16px;
	background: transparent url('//img.exs.lv/bildes/fugue-icons/refresh.png') no-repeat 50% 50%;
	position: absolute;
	top: 0;
	right: 0;
	padding: 5px;
	opacity:0.6;
	filter:alpha(opacity=60);
}

.gameserver .gameserver-reload:hover {
	opacity:1;
	filter:alpha(opacity=100);
}

.gameserver p.playerlist {
	padding: 0;
}

.gameserver p.playerlist span {
	border-bottom: 1px dotted #eaeaea;
	padding: 1px 8px 0;
	font-size: 11px;
	display: block;
}

.gameserver p.playerlist span .player-score {
	float: right;
	color: #aaa;
}

/* sākumlapas "wall" */
#wall-posts {
	list-style:none;
	padding: 0;
	margin: 10px 0;
}

#wall-posts li {
	margin: 8px 0;
}

#wall-posts li a {
	display: block;
	text-decoration: none;
	color: #444;
}

#wall-posts .last-post {
	font-size: 13px;
	margin: 12px 0 5px 0;
}

#wall-posts .av {
	width:64px;
	height:64px;
}

#wall-posts .post-wrapper {
	margin-left: 74px;
}

#wall-posts .post-info {
	font-family: Ubuntu, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

#wall-posts .post-wrapper img {
	max-width: 300px;
}

/* Profilu sasaistes sadaļa */
.new-main {
	padding:10px 20px;
	margin:10px 3px;
	border:1px solid #EBEBEB;
	background:rgb(252, 252, 252);
}
	.new-main .small-text {
		font-weight:bold;
		font-size:12px
	}
#profile-list tr.main-profile:nth-child(4n + 2) {
	background:#FAFAFA
}
	.is-hidden {
		display:none
	}
	.main-profile td:nth-child(2) {
		position:relative
	}
	.show-children:hover {
		cursor:pointer
	}
	.show-children {
		padding:5px 15px 0;
		position:absolute;
		top:5px;
		right:0
	}
	.show-children:hover {
		background:rgb(243, 243, 243)
	}
.child-block {
	background:#F7FBFF;
	border:1px solid #E2E6F1;
	margin-left:10px;
	padding:10px 20px
}
.profiles-description {
	width:450px;
	min-height:130px
}

/* Neliela info daudzuma fancybox stili */
.fancy-container {
	width:500px;
	min-height:130px;
	padding-bottom:7px;
	overflow:auto;
	margin:0 5px 5px;
	font-size:12px
}
.fancy-title {
	margin:5px 0;
	font-weight:bold;
	font-size:14px;
	color:#234C79;
	padding:0 0 5px;
	border-bottom:1px solid #ddd
}
.fancy-info {
	float:right;
	padding:5px;
	margin-top:7px;
	border:1px dotted #EBEBEB
}
.fancy-info i {
	color:#95A4B3
}

/* Lietotāja bloķēšanas sadaļa */
.form-table .form-option {
	text-align:right;
	padding-right:12px
}
.form-table td {
	padding-bottom:7px
}

/* Bloķēto profilu sadaļa */
.delete-ban {
	opacity:0.7
}
.delete-ban:hover {
	opacity:1.0
}
.banned-ip {
	position:relative;
	top:3px
}
img.show-banned {
	position:relative;
	top:7px;
	opacity:0.5
}
img.show-banned:hover {
	opacity:1.0
}
.child-padding {
	background:#FCFCFC
}

/* Dateks.lv piedāvājumi */
#dateks .dateks-content {
	font-size: 85%;
	text-align: center;
}

#dateks table {
	width: 100%;
}

#dateks p {
	padding: 3px 10px;
	text-align: center;
}

#dateks table tr td {
	font-size: 85%;
	padding: 0 2px;
	text-align: left;
}

#dateks table tr td:first-child {
	text-align: right;
	width: 45%;
	color: #888;
}

#dateks table tr td:first-child::after {
	content: ":";
}

#dateks img {
	display: block;
	max-width: 80%;
	height: auto;
	margin: 5px auto;
}

/* Reģistrācijas formas aizsardzība */
#required-registration-field {
	height: 0;
	padding: 0;
	margin: 0;
	overflow: hidden;
}

/* Steam lapa */
#steam-online {
	width: 100%;
	float: left;
	display: block;
	overflow: hidden;
	position: relative;
}

#steam-online .game {
	margin:0 0 10px;
	border: 2px solid gray;
	border-radius: 5px;
	width: 31%;
}

#steam-online .game .hero-image {
	display: block;
}

#steam-online .game .hero-image  a {
	display: block;
	position: relative;
}

#steam-online .game .hero-image img{
	display: block;
	margin: 0;
	padding: 0;
}

#steam-online .game .player-list ul {
	margin: 10px 0;
	padding: 0;
}

#steam-online .game .player-list ul li {
	padding: 0;
	list-style: none;
	background: none;
}

#steam-online .game .player-list ul li .steam-link {
	display: block;
	float: left;
	margin: 0 5px 0;
}

#steam-online .game .player-list ul li .steam-link img{
	display: block;
	width: 16px;
	height: 16px;
}

